Changed names of source dirs to match repo name

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = forcemap
+name = aggforce
 version = 0.0.1
 author = Aleksander Evren Paetzold Durumeric
 author_email = alekepd@gmail.com
