Added new tests for offsets and projections.
- added methods underlying tests in new jaxmapval module
- added new py.tests in test_forces
- added new reference maps in tests/data for tests
- added pytest.ini to set test types
- modified ci.yml to install jax for tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest "qpsolvers[starter_solvers]"
+          pip install pytest "qpsolvers[starter_solvers]" "jax[cpu]"
       - name: Install package
         run: |
           pip install .
