Fixed package extra name change in qpsolvers.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest "qpsolvers[starter_solvers]" flake8
+          pip install pytest "qpsolvers[open_source_solvers]" flake8
       - name: Install package
         run: |
           pip install .
