--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest "qpsolvers[open_source_solvers]" "jax[cpu]" mdtraj
+          pip install pytest "qpsolvers[open_source_solvers]>=3.5" "jax[cpu]" mdtraj
       - name: Install package
         run: |
           pip install .
