Added requirements and tested installation.
- Added multiple install targets, including [test]
- Made github tests use [test] install, removing manual dependency
  installation
- Reorganized tests so that non-jax tests can be run without installing
  jax
- Added setup.py for editable installs

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,27 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.7
+install_requires =
+    numpy
+    qpsolvers
+    osqp
+
+[options.extras_require]
+nonlinear = 
+    numpy
+    qpsolvers
+    osqp
+    jax[cpu]
+    scipy
+test = 
+    numpy
+    qpsolvers
+    osqp
+    scs
+    jax[cpu]
+    scipy
+    mdtraj
+    pytest
 
 [options.packages.find]
 where = src
