--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.cfg.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest "qpsolvers[open_source_solvers]>=3.5" "jax[cpu]" mdtraj
       - name: Install package
         run: |
-          pip install .
+          pip install .[test]
       - name: Test with pytest
         run: |
           pytest -vs
