--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,13 +28,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest "qpsolvers[open_source_solvers]>=3.5" flake8
       - name: Install package
         run: |
-          pip install .
+          pip install .[test]
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
