--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
 [metadata]
 name = aggforce
 version = 0.0.1
@@ -17,7 +21,7 @@ classifiers =
 package_dir =
     = src
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.9
 install_requires =
     numpy
     qpsolvers
