--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: Lint with flake8
+name: Lint with ruff, check with mypy
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
     branches:
       - "main"
   schedule:
-    # Nightly tests run on master by default:
+    # Weekly tests run on master by default:
     #   Scheduled workflows run on the latest commit on the default or base branch.
     #   (from https://help.github.com/en/actions/reference/events-that-trigger-workflows#scheduled-events-schedule)
     - cron: "0 0 * * SUN"
@@ -31,13 +31,15 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest flake8
+          pip install ruff mypy tqdm types-tqdm pandas pandas-stubs types-openpyxl
       - name: Install package
         run: |
-          pip install .[test]
-      - name: Lint with flake8
+          pip install .
+      - name: Lint with ruff
         run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          # ruff check using toml settings. Ignore unused argument errors.
+          ruff check .
+      - name: Type check with mypy
+        run: |
+          # mypy check. Ignore uncheckable modules.
+          mypy . --ignore-missing-imports
