Added package docstring, typing_ext dep, and setup.py basics for ruff.

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,18 +23,21 @@ package_dir =
 packages = find:
 python_requires = >=3.9
 install_requires =
+    typing_extensions
     numpy
     qpsolvers
     osqp
 
 [options.extras_require]
 nonlinear = 
+    typing_extensions
     numpy
     qpsolvers
     osqp
     jax[cpu]
     scipy
 test = 
+    typing_extensions
     numpy
     qpsolvers
     osqp
